user-service/user-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-service
  annotations:
    konghq.com/strip-path: "true"
    konghq.com/protocols: "https"
    konghq.com/https-redirect-status-code: "301"
    konghq.com/upstream-url: "https://user-service.1sok4fsjn6yq.au-syd.codeengine.appdomain.cloud"
spec:
  ingressClassName: kong
  rules:
    - host: ""
      http:
        paths:
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 80
